myapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop-app
  namespace: vmimported-user2
  labels:
    app: workshop-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workshop-app
  template:
    metadata:
      labels:
        app: workshop-app
    spec:
      containers:
      - name: workshop-app
        image: harbor-harbor.apps.cluster-tkbfg.dynamic.redhatworkshops.io/workshop/user2-my-app:v1
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
